plugins {
	id 'org.springframework.boot' version '2.2.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
	id 'com.vaadin' version '0.14.5.1'
}

defaultTasks("clean", "build")

group = 'com.crud.hotels'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
}

dependencies {
	implementation('com.vaadin:vaadin-spring-boot-starter') {
//         Webjars are only needed when running in Vaadin 13 compatibility mode
		["com.vaadin.webjar", "org.webjars.bowergithub.insites",
		 "org.webjars.bowergithub.polymer", "org.webjars.bowergithub.polymerelements",
		 "org.webjars.bowergithub.vaadin", "org.webjars.bowergithub.webcomponents"]
				.forEach { group -> exclude(group: group) }
	}
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
	compileOnly 'org.projectlombok:lombok:1.18.16'
	annotationProcessor 'org.projectlombok:lombok:1.18.16'
	compile 'com.posadskiy:currency-converter:1.1.3'

	implementation 'com.squareup.okhttp3:okhttp:3.14.6'
	testCompileOnly 'org.projectlombok:lombok:1.18.16'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.2'
	testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.11.1'
	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.11.1'
	dependencies {
		compile 'com.neovisionaries:nv-i18n:1.28'
	}
	compile('io.springfox:springfox-swagger2:2.9.2')
	compile('io.springfox:springfox-swagger-ui:2.9.2')
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	testImplementation 'com.google.code.gson:gson'
	testCompile("org.assertj:assertj-core:3.11.1")
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.1.1'
	implementation group: 'org.springframework.security', name: 'spring-security-web'
	implementation group: 'org.springframework.security', name: 'spring-security-config'
}

dependencyManagement {
	imports {
		mavenBom "com.vaadin:vaadin-bom:$vaadinVersion"
	}
}

test {
	useJUnitPlatform()
}

vaadin {
	pnpmEnable = false
}
